//     Bugfixes:
//         Bugfixes go there.
//     Internal changes:
//         Changes to the code that do not affect the behavior of the program.

----------------------------------------------------------------------------------------------------------------------
Version:
Date:
    Features:
        - Support tables without a header recipe.
        - Retain scroll when switching tabs.
    Fixes:
        - Support craft-fluid and scripted research triggers.
        - Consider quality restrictions when analyzing craft-item or build-item technology triggers.
        - Fix loading recent versions of K2.
        - Remove incorrect speed bonus for quality mining drills.
        - Show beacons added by the per-page settings on each row they affect.
----------------------------------------------------------------------------------------------------------------------
Version: 2.16.0
Date: October 24th 2025
    Features:
        - Restore support for Factorio 1.1.
    Fixes:
        - Fix rendering of multi-icon technologies (e.g. shooting speed techs)
        - Add simplified support for debug.getinfo(), only returns short_src. Fixes #455, #504.
        - Fix load errors for Pacifist (#535), PlanetsLib, and some planet mods.
        - Fix loading mods where modules spoil into other modules.
        - Modules were not exported correctly in labs or mining drills.
        - Hide TextInput placeholder before written text is displayed.
----------------------------------------------------------------------------------------------------------------------
Version: 2.15.0
Date: September 1st 2025
    Features:
        - Add Ctrl+Shift+Click to add the most cost-effective, accessible recipe for an item.
        - Better accessibility analysis for Ultracube.
    Fixes:
        - Fix icon rendering.
        - Hide fluid temperature options when not part of a recipe or not accepted by that recipe.