@@ -24,6 +24,7 @@ Date:
     Features:
         - Support tables without a header recipe.
         - Retain scroll when switching tabs.
+        - Added placeholder text on project file selection.
     Fixes:
         - Support craft-fluid and scripted research triggers.
         - Consider quality restrictions when analyzing craft-item or build-item technology triggers.
